# archwallet-backend

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/db/: models.py
app/routes/: check_health.py
