[tool.poetry]
name = "archwallet-backend"
version = "0.1.0"
description = "backend service for archwallet app"
authors = ["Felipe <tomazalvesfelipe@gmail.com>"]
readme = "README.md"
packages = [{include = "archwallet_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.8"
psycopg2-binary = "^2.9.6"
pytest = "^7.2.2"
alembic = "^1.10.3"
python-decouple = "^3.8"
autopep8 = "^2.0.2"
httpx = "^0.23.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
